# Knitwork

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_knitwork.sh
.github/workflows/: latest.yaml
data/: example_hits_RdRp_green_site.sdf
data-manager/: knitwork.yaml  manifest.yaml
knitwork/: __init__.py  __main__.py  config.py  fragment.py  knit.py  query.py  tools.py
