[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Knitwork"
version = "0.1.0"
authors = [
    { name = "Max Winokan", email = "max@winokan.com" },
]
description = "FragmentKnitwork"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "MPyTools",
    "joblib",
    "pandas",
    "neo4j",
    "rdkit",
    "IPython",
    "scipy",
    "typer",
]

[project.urls]
"Homepage" = "https://github.com/xchem/FragmentKnitwork"
"Bug Tracker" = "https://github.com/xchem/FragmentKnitwork/issues"

[tool.hatch.build]
include = [
    "knitwork/*.py",
    "run_knitwork.sh",
]
